# babelwrap-mcp

./: .gitignore  LICENSE  README.md  glama.json  pyproject.toml  server.json
src/babelwrap_mcp/: __init__.py  client.py  server.py
