[project]
name = "babelwrap-mcp"
version = "0.1.0"
description = "MCP server for BabelWrap — give AI agents web browsing superpowers."
readme = "README.md"
license = "MIT"
authors = [{name = "Pedro M. Fernandes"}]
requires-python = ">=3.10"
keywords = ["mcp", "ai-agents", "browser", "automation", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
    "fastmcp>=2.3",
]

[project.scripts]
babelwrap-mcp = "babelwrap_mcp.server:main"

[project.urls]
Homepage = "https://babelwrap.com"
Documentation = "https://babelwrap.com/docs/mcp"
Repository = "https://github.com/soulfir/babelwrap-mcp"
Issues = "https://github.com/soulfir/babelwrap-mcp/issues"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
